--- a/style.css
+++ b/style.css
@@ -125,8 +125,7 @@ section
 	}
 }
 
-#intro .intro-text,
-#results p
+#intro .intro-text
 {
     font-family: 'Cabin', Helvetica, Arial, sans-serif;
 	font-size: 16px;
@@ -135,8 +134,7 @@ section
 }
 
 @media (min-width: 768px) {
-	#intro .intro-text,
-	#results p
+	#intro .intro-text 
 	{
 	    font-family: 'Cabin', Helvetica, Arial, sans-serif;
 		font-size: 30px;
@@ -146,42 +144,30 @@ section
 	}
 }
 
+#results p
+{
+    font-family: 'Cabin', Helvetica, Arial, sans-serif;
+	font-size: 30px;
+	line-height: 45px;
+	text-align: center;
+	color: #007A75;
+}
+
 
 #results b
 {
     font-family: 'Cabin', Helvetica, Arial, sans-serif;
-	font-size: 16px;
-	line-height: 32px;
+	font-size: 30px;
+	line-height: 45px;
 	font-weight: bold;
 	color: #FF7100;
 }
 
-
-@media (min-width: 768px) {
-	#results b
-	{
-	    font-family: 'Cabin', Helvetica, Arial, sans-serif;
-		font-size: 30px;
-		line-height: 45px;
-		font-weight: bold;
-		color: #FF7100;
-	}
-	
-	#results h2
-	{
-		margin-top: 80px;
-		margin-bottom: 15px;
-		font-size: 50px;
-		color: #C85900;
-		text-align: center;
-		font-family: 'Lobster Two', Helvatica, cursive, serif;
-	}
-}
 #results h2 
 {
-	margin-top: 20px;
-	margin-bottom: 10px;
-	font-size: 20px;
+	margin-top: 80px;
+	margin-bottom: 15px;
+	font-size: 50px;
 	color: #C85900;
 	text-align: center;
 	font-family: 'Lobster Two', Helvatica, cursive, serif;
